# Generated by Django 4.2.13 on 2026-04-08 09:08

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Email',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('message_id', models.CharField(db_index=True, max_length=255, unique=True)),
                ('gmail_id', models.CharField(blank=True, max_length=100, null=True)),
                ('from_address', models.EmailField(db_index=True, max_length=254)),
                ('from_display_name', models.CharField(blank=True, max_length=255)),
                ('to_addresses', models.JSONField(default=list)),
                ('cc_addresses', models.JSONField(blank=True, null=True)),
                ('reply_to', models.EmailField(blank=True, max_length=254, null=True)),
                ('subject', models.CharField(max_length=500)),
                ('body_text', models.TextField(blank=True)),
                ('body_html', models.TextField(blank=True, null=True)),
                ('headers_raw', models.JSONField(default=dict)),
                ('received_chain', models.JSONField(default=list)),
                ('urls_extracted', models.JSONField(default=list)),
                ('status', models.CharField(choices=[('PENDING', 'Pending'), ('ANALYZING', 'Analyzing'), ('DELIVERED', 'Delivered'), ('QUARANTINED', 'Quarantined'), ('BLOCKED', 'Blocked')], db_index=True, default='PENDING', max_length=20)),
                ('verdict', models.CharField(blank=True, choices=[('CLEAN', 'Clean'), ('SUSPICIOUS', 'Suspicious'), ('MALICIOUS', 'Malicious')], db_index=True, max_length=15, null=True)),
                ('score', models.IntegerField(blank=True, null=True)),
                ('confidence', models.CharField(blank=True, choices=[('LOW', 'Low'), ('MEDIUM', 'Medium'), ('HIGH', 'High')], max_length=10, null=True)),
                ('analyzed_at', models.DateTimeField(blank=True, null=True)),
                ('received_at', models.DateTimeField(db_index=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'ordering': ['-received_at'],
            },
        ),
        migrations.CreateModel(
            name='QuarantineEntry',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('PENDING', 'Pending'), ('RELEASED', 'Released'), ('DELETED', 'Deleted'), ('BLOCKED', 'Blocked')], db_index=True, default='PENDING', max_length=20)),
                ('action', models.CharField(blank=True, max_length=20, null=True)),
                ('reviewed_at', models.DateTimeField(blank=True, null=True)),
                ('notes', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('email', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='quarantine', to='emails.email')),
                ('reviewer', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='ExtractedIOC',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ioc_type', models.CharField(choices=[('HASH', 'Hash'), ('URL', 'URL'), ('IP', 'IP'), ('DOMAIN', 'Domain')], db_index=True, max_length=20)),
                ('value', models.CharField(db_index=True, max_length=500)),
                ('severity', models.CharField(choices=[('CRITICAL', 'Critical'), ('HIGH', 'High'), ('MEDIUM', 'Medium'), ('LOW', 'Low')], default='HIGH', max_length=10)),
                ('source_checker', models.CharField(blank=True, max_length=50)),
                ('first_seen', models.DateTimeField(auto_now_add=True)),
                ('email', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='iocs', to='emails.email')),
            ],
        ),
        migrations.CreateModel(
            name='EmailAttachment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('filename', models.CharField(max_length=255)),
                ('content_type', models.CharField(max_length=100)),
                ('size_bytes', models.IntegerField()),
                ('sha256_hash', models.CharField(db_index=True, max_length=64)),
                ('md5_hash', models.CharField(max_length=32)),
                ('file_magic', models.CharField(blank=True, max_length=100, null=True)),
                ('is_dangerous_ext', models.BooleanField(default=False)),
                ('is_double_ext', models.BooleanField(default=False)),
                ('is_mime_mismatch', models.BooleanField(default=False)),
                ('yara_matches', models.JSONField(blank=True, null=True)),
                ('ti_match', models.CharField(blank=True, max_length=50, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('email', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='attachments', to='emails.email')),
            ],
        ),
        migrations.CreateModel(
            name='AnalysisResult',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('preprocess_score', models.IntegerField(default=0)),
                ('spf_result', models.CharField(choices=[('pass', 'Pass'), ('fail', 'Fail'), ('softfail', 'Softfail'), ('none', 'None')], default='none', max_length=20)),
                ('dkim_result', models.CharField(choices=[('pass', 'Pass'), ('fail', 'Fail'), ('none', 'None')], default='none', max_length=20)),
                ('dmarc_result', models.CharField(choices=[('pass', 'Pass'), ('fail', 'Fail'), ('none', 'None')], default='none', max_length=20)),
                ('is_reply_to_mismatch', models.BooleanField(default=False)),
                ('is_display_spoof', models.BooleanField(default=False)),
                ('keyword_score', models.IntegerField(default=0)),
                ('keywords_matched', models.JSONField(default=list)),
                ('url_score', models.IntegerField(default=0)),
                ('url_findings', models.JSONField(default=list)),
                ('attachment_score', models.IntegerField(default=0)),
                ('attachment_findings', models.JSONField(default=list)),
                ('chain_score', models.IntegerField(default=0)),
                ('chain_findings', models.JSONField(default=dict)),
                ('total_score', models.IntegerField(default=0)),
                ('pipeline_duration_ms', models.IntegerField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('email', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='analysis', to='emails.email')),
            ],
        ),
    ]
