# Generated by Django 4.2.13 on 2026-04-08 09:08

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='ScheduledReport',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('report_type', models.CharField(choices=[('EMAIL_SUMMARY', 'Email Summary'), ('THREAT_INTEL', 'Threat Intel'), ('IOC_EXPORT', 'IOC Export'), ('CUSTOM', 'Custom')], max_length=30)),
                ('schedule', models.CharField(choices=[('DAILY', 'Daily'), ('WEEKLY', 'Weekly'), ('MONTHLY', 'Monthly')], max_length=10)),
                ('last_run', models.DateTimeField(blank=True, null=True)),
                ('next_run', models.DateTimeField(blank=True, db_index=True, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('recipients', models.JSONField(default=list)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('created_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Report',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('report_type', models.CharField(choices=[('EMAIL_SUMMARY', 'Email Summary'), ('THREAT_INTEL', 'Threat Intel'), ('IOC_EXPORT', 'IOC Export'), ('CUSTOM', 'Custom')], max_length=30)),
                ('file_path', models.CharField(blank=True, max_length=500)),
                ('output_format', models.CharField(choices=[('CSV', 'CSV'), ('JSON', 'JSON'), ('PDF', 'PDF')], default='CSV', max_length=10)),
                ('filters_applied', models.JSONField(default=dict)),
                ('record_count', models.IntegerField(default=0)),
                ('file_size_bytes', models.IntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True, db_index=True)),
                ('generated_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='IOCExport',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('export_format', models.CharField(choices=[('CSV', 'CSV'), ('JSON', 'JSON'), ('STIX', 'STIX')], default='CSV', max_length=10)),
                ('ioc_types', models.JSONField(default=list)),
                ('record_count', models.IntegerField(default=0)),
                ('file_path', models.CharField(blank=True, max_length=500)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('created_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
