# Generated by Django 4.2.13 on 2026-04-08 09:08

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='MaliciousDomain',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('domain', models.CharField(db_index=True, max_length=255, unique=True)),
                ('category', models.CharField(blank=True, max_length=50)),
                ('source', models.CharField(choices=[('URLHAUS', 'URLhaus'), ('VIRUSTOTAL', 'VirusTotal'), ('ABUSEIPDB', 'AbuseIPDB'), ('MANUAL', 'Manual')], default='URLHAUS', max_length=30)),
                ('added_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='MaliciousHash',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('sha256_hash', models.CharField(db_index=True, max_length=64, unique=True)),
                ('md5_hash', models.CharField(blank=True, max_length=32)),
                ('malware_family', models.CharField(blank=True, max_length=100)),
                ('source', models.CharField(choices=[('MALWAREBAZAAR', 'MalwareBazaar'), ('VIRUSTOTAL', 'VirusTotal'), ('MANUAL', 'Manual')], default='MALWAREBAZAAR', max_length=30)),
                ('severity', models.CharField(choices=[('CRITICAL', 'Critical'), ('HIGH', 'High'), ('MEDIUM', 'Medium')], default='HIGH', max_length=10)),
                ('added_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='MaliciousIP',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ip_address', models.GenericIPAddressField(db_index=True, unique=True)),
                ('category', models.CharField(blank=True, max_length=50)),
                ('source', models.CharField(choices=[('ABUSEIPDB', 'AbuseIPDB'), ('VIRUSTOTAL', 'VirusTotal'), ('MANUAL', 'Manual')], default='ABUSEIPDB', max_length=30)),
                ('abuse_score', models.IntegerField(default=0)),
                ('added_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='YaraRule',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, unique=True)),
                ('rule_content', models.TextField()),
                ('severity', models.CharField(choices=[('CRITICAL', 'Critical'), ('HIGH', 'High'), ('MEDIUM', 'Medium')], default='HIGH', max_length=10)),
                ('description', models.TextField(blank=True)),
                ('is_active', models.BooleanField(default=True)),
                ('added_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='WhitelistEntry',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('entry_type', models.CharField(choices=[('EMAIL', 'Email'), ('DOMAIN', 'Domain'), ('IP', 'IP')], max_length=10)),
                ('value', models.CharField(db_index=True, max_length=255)),
                ('reason', models.TextField(blank=True)),
                ('added_at', models.DateTimeField(auto_now_add=True)),
                ('added_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'unique_together': {('entry_type', 'value')},
            },
        ),
        migrations.CreateModel(
            name='BlacklistEntry',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('entry_type', models.CharField(choices=[('EMAIL', 'Email'), ('DOMAIN', 'Domain'), ('IP', 'IP')], max_length=10)),
                ('value', models.CharField(db_index=True, max_length=255)),
                ('reason', models.TextField(blank=True)),
                ('added_at', models.DateTimeField(auto_now_add=True)),
                ('added_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'unique_together': {('entry_type', 'value')},
            },
        ),
    ]
