@startuml 08-class-models
skinparam backgroundColor #FFFFFF
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #2563EB
  HeaderBackgroundColor #EFF6FF
  FontColor #1E293B
}
title Stratos — Core Data Model (Key Relationships)

class User {
  +id: BigAutoField <<PK>>
  +username: CharField <<unique>>
  +email: EmailField
  +role: CharField
  ..choices..
  ADMIN | ANALYST | VIEWER
}

class Email {
  +id: BigAutoField <<PK>>
  +message_id: CharField <<unique>>
  +gmail_id: CharField <<unique>>
  +from_address: EmailField
  +subject: CharField
  +body_text: TextField
  +urls_extracted: JSONField
  +status: CharField
  +verdict: CharField
  +score: IntegerField
  +confidence: CharField
  +received_at: DateTimeField
  +analyzed_at: DateTimeField
  ..status choices..
  PENDING | ANALYZING | DELIVERED
  QUARANTINED | BLOCKED
  ..verdict choices..
  CLEAN | SUSPICIOUS | MALICIOUS
}

class EmailAttachment {
  +filename: CharField
  +sha256_hash: CharField
  +is_dangerous_ext: BooleanField
  +is_double_ext: BooleanField
  +is_mime_mismatch: BooleanField
  +yara_matches: JSONField
  +ti_match: CharField
}

class AnalysisResult {
  +preprocess_score: IntegerField
  +spf_result: CharField
  +dkim_result: CharField
  +dmarc_result: CharField
  +is_reply_to_mismatch: BooleanField
  +is_display_spoof: BooleanField
  +keyword_score: IntegerField
  +keywords_matched: JSONField
  +url_score: IntegerField
  +attachment_score: IntegerField
  +chain_score: IntegerField
  +total_score: IntegerField
  +pipeline_duration_ms: IntegerField
}

class QuarantineEntry {
  +status: CharField
  +action: CharField
  +reviewed_at: DateTimeField
  +notes: TextField
  ..status choices..
  PENDING | RELEASED | DELETED | BLOCKED
}

class ExtractedIOC {
  +ioc_type: CharField
  +value: CharField
  +severity: CharField
  +source_checker: CharField
  +first_seen: DateTimeField
  ..type choices..
  HASH | URL | IP | DOMAIN
}

class MaliciousHash {
  +sha256_hash: CharField <<unique>>
  +malware_family: CharField
  +source: CharField
  +severity: CharField
}

class MaliciousDomain {
  +domain: CharField <<unique>>
  +category: CharField
  +source: CharField
}

class WhitelistEntry {
  +entry_type: CharField
  +value: CharField
  +reason: TextField
  ..type choices..
  EMAIL | DOMAIN | IP
}

class BlacklistEntry {
  +entry_type: CharField
  +value: CharField
  +reason: TextField
}

class Report {
  +report_type: CharField
  +output_format: CharField
  +file_path: CharField
  +record_count: IntegerField
  +created_at: DateTimeField
}

Email "1" *-- "0..*" EmailAttachment : has
Email "1" *-- "0..1" AnalysisResult : has
Email "1" *-- "0..1" QuarantineEntry : has
Email "1" *-- "0..*" ExtractedIOC : yields
QuarantineEntry "0..*" --> "0..1" User : reviewed by
Report "0..*" --> "0..1" User : generated by
WhitelistEntry "0..*" --> "0..1" User : added by
BlacklistEntry "0..*" --> "0..1" User : added by
@enduml
